Post width/layout issue [touch: 15]

--- a/scss/scss/objects/_article.scss
+++ b/scss/scss/objects/_article.scss
@@ -1,10 +1,6 @@
 //Article
 article {
-	clear: both;
-	display: table;
 	vertical-align: top;
-	width: 100%;
-	border-collapse: collapse;;
 	margin-bottom: $pad-double;	
 	p {
 		text-align: justify;
